# FreeSWITCH_test

./: README.md  appveyor.yml
FreeSWITCH/cert/: dtls-srtp.pem  wss.pem
FreeSWITCH/conf/: config.FS0  extensions.conf  freeswitch.serial  freeswitch.xml  fur_elise.ttml  mime.types  notify-voicemail.tpl  tetris.ttml  vars.xml  voicemail.tpl  web-vm.tpl
FreeSWITCH/conf/autoload_configs/: abstraction.conf.xml  acl.conf.xml  alsa.conf.xml  amqp.conf.xml  blacklist.conf.xml  callcenter.conf.xml  cdr_csv.conf.xml  cdr_mongodb.conf.xml  cdr_pg_csv.conf.xml  cdr_sqlite.conf.xml  cidlookup.conf.xml  conference.conf.xml  conference_layouts.conf.xml  console.conf.xml  db.conf.xml  dialplan_directory.conf.xml  dingaling.conf.xml  directory.conf.xml  distributor.conf.xml  easyroute.conf.xml  enum.conf.xml  erlang_event.conf.xml  event_multicast.conf.xml  event_socket.conf.xml  fax.conf.xml  fifo.conf.xml  format_cdr.conf.xml  graylog2.conf.xml  hash.conf.xml  hiredis.conf.xml  httapi.conf.xml  http_cache.conf.xml  ivr.conf.xml  java.conf.xml  kazoo.conf.xml  lcr.conf.xml  logfile.conf.xml  lua.conf.xml  memcache.conf.xml  modules.conf.xml  (+37 more)
FreeSWITCH/conf/chatplan/: default.xml
FreeSWITCH/conf/dialplan/: default.xml  features.xml  public.xml  skinny-patterns.xml
FreeSWITCH/conf/dialplan/default/: 00_ladspa.xml  00_pizza_demo.xml  01_Talking_Clock.xml  01_example.com.xml  ideasip.com.noload  pulver.com.noload  sipbroker.com.noload  sipphone.com.noload  tollfreegateway.com.noload
FreeSWITCH/conf/dialplan/public/: 00_inbound_did.xml
FreeSWITCH/conf/dialplan/skinny-patterns/: 20-Demo.xml  20-Local_extension.xml  90-External.xml  99-Default_Drop.xml
FreeSWITCH/conf/directory/: default.xml
FreeSWITCH/conf/directory/default/: 1000.xml  1001.xml  1002.xml  1003.xml  1004.xml  1005.xml  1006.xml  1007.xml  1008.xml  1009.xml  1010.xml  1011.xml  1012.xml  1013.xml  1014.xml  1015.xml  1016.xml  1017.xml  1018.xml  1019.xml  brian.xml  default.xml  example.com.xml  fiber.xml  skinny-example.xml
FreeSWITCH/conf/ivr_menus/: demo_ivr.xml  new_demo_ivr.xml
FreeSWITCH/conf/jingle_profiles/: client.xml  server.xml
FreeSWITCH/conf/lang/de/: de.xml
FreeSWITCH/conf/lang/de/demo/: demo.xml
FreeSWITCH/conf/lang/de/vm/: sounds.xml  tts.xml
FreeSWITCH/conf/lang/es/: es_ES.xml  es_MX.xml
FreeSWITCH/conf/lang/es/demo/: demo-es-MX.xml
FreeSWITCH/conf/lang/es/dir/: sounds-es-MX.xml  tts-es-ES.xml  tts-es-MX.xml
FreeSWITCH/conf/lang/es/vm/: sounds-es-ES.xml  sounds-es-MX.xml  tts-es-ES.xml  tts-es-MX.xml
FreeSWITCH/conf/lang/fr/: fr.xml
FreeSWITCH/conf/lang/fr/demo/: demo.xml
FreeSWITCH/conf/lang/fr/dir/: tts.xml
FreeSWITCH/conf/lang/fr/vm/: sounds.xml
FreeSWITCH/conf/lang/he/: he.xml
FreeSWITCH/conf/lang/he/demo/: demo-ivr.xml
FreeSWITCH/conf/lang/he/dir/: sounds.xml
FreeSWITCH/conf/lang/he/vm/: sounds.xml
FreeSWITCH/conf/lang/pt/: pt_BR.xml  pt_PT.xml
FreeSWITCH/conf/lang/pt/demo/: demo-ivr-pt-PT.xml  demo-pt-BR.xml  demo-pt-PT.xml
FreeSWITCH/conf/lang/pt/dir/: tts-pt-BR.xml  tts-pt-PT.xml
FreeSWITCH/conf/lang/pt/vm/: sounds-pt-BR.xml  sounds-pt-PT.xml  tts-pt-BR.xml  tts-pt-PT.xml
FreeSWITCH/conf/lang/sv/: sv.xml
FreeSWITCH/conf/lang/sv/vm/: sounds.xml
FreeSWITCH/conf/mrcp_profiles/: loquendo-7-mrcp-v2.xml  nuance-1.0.0-mrcp-v1.xml  nuance-5.0-mrcp-v1.xml  nuance-5.0-mrcp-v2.xml  unimrcpserver-mrcp-v1.xml  vestec-mrcp-v1.xml  voxeo-prophecy-8.0-mrcp-v1.xml
FreeSWITCH/conf/sip_profiles/: external-ipv6.xml  external.xml  internal-ipv6.xml  internal.xml
FreeSWITCH/conf/skinny_profiles/: internal.xml
FreeSWITCH/conf/yaml/: extensions.yaml  mod_yaml.yaml
FreeSWITCH/db/: core.db  fifo.db  json.db  sofia_reg_internal.db
FreeSWITCH/log/: freeswitch.xml.fsxml
FreeSWITCH/mod/: mod_managed.dll.metagen
wpfib_essentials/: README.md  WpfFiber.sln
wpfib_essentials/WpfFiber/: .gitignore  App.xaml  App.xaml.cs  FiberConnectionState.cs  FpsCounter.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  StreamInfo.cs  WpfFiber.csproj  WpfFiber.sln
wpfib_essentials/WpfFiber/Fiber/: FiberAPI.cs  FiberAPICallbacks.cs
wpfib_essentials/WpfFiber/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
wpfib_essentials/WpfFiber/Render/: D3DRender.cs  HwndRender.cs
wpfib_essentials/fiberapp/fiber/bwmgr/src/: aimd_rate_control.h  autoselectbwmgr.h  bandwidthmanagement.h  bjnwebrtcbwmgr.h  bwe_defines.h  bwmgr.h  (+28 more)
wpfib_essentials/fiberapp/src/: CMakeLists.txt  DeviceControllerFactory.cpp  IDeviceController.h  audiodevconfig.cpp  audiodevconfig.h  bjn_cpu_monitor.cc  bjn_cpu_monitor.h  bjn_render_dev.cpp  bjn_render_dev.h  bjndevices.cc  bjndevices.h  bjnhelpers.cpp  bjnhelpers.h  bjnrenderer.h  bjnrendererfactory.h  callapi.cpp  callapi.h  network_monitor.h  networkmonitorfactory.h  openlog.cpp  openlog.h  skinnysipmanager.cpp  skinnysipmanager.h  uiwidget.cpp  uiwidget.h  webrtc_capture_dev.cpp  webrtc_capture_dev.h  webrtc_capture_dev.mm  webrtc_voe_dev.cc  webrtc_voe_dev.h
wpfib_essentials/fiberapp/src/Win/: FiberAPI.cpp  FiberAPI.h  Graphics.rc  WindowProcBase.cpp  WindowProcBase.h  d3d9_effect.fx  d3d_render.cc  d3d_render.h  gdivideorenderer.cc  gdivideorenderer.h  projectDef.cmake  resource.h  winUtils.cc  winUtils.h  winaudiodevconfig.cpp  winaudiodevconfig.h  winbjnrenderer.cc  winbjnrenderer.h  winnetwork_monitor.cpp  winnetwork_monitor.h  winuiwidget.cpp  winuiwidget.h
wpfib_essentials/fiberapp/src/Win/D3D/: DxBjnRenderer.cpp  DxBjnRenderer.h  DxVideoRenderer.cpp  DxVideoRenderer.h  IDxProxyWidget.h  d3dproxywidget.cpp  d3dproxywidget.h
wpfib_essentials/fiberapp/src/Win/winfbrapp/: winfbrapp.sln
wpfib_essentials/fiberapp/src/Win/winfbrapp/winfbrapp/: ReadMe.txt  stdafx.cpp  winfbrapp.cpp  winfbrapp.vcxproj
wpfib_essentials/fiberapp/src/Win/winfbrapp/winfbrapp/config/: fiberapp.config
wpfib_essentials/fiberapp/src/Win/winfbrapp/winfbrapp/x64/Debug/: vc120.idb
wpfib_essentials/fiberapp/src/Win/winfbrapp/winfbrapp/x64/Debug/winfbrapp.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  winfbrapp.lastbuildstate
(+291 files in other folders)
